[package]
name = "satoshi-guesser-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi4"] }
napi-derive = "2.16"
secp256k1 = { version = "0.29", features = ["std", "rand"] }
sha2 = "0.10"
ripemd = "0.1"
rand = "0.8"
hex = "0.4"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = "symbols"
